# emergent-dynamics-lab

./: .gitattributes  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-lock.txt
.cache_active/: and3.pkl  cascade.pkl  demorgan.pkl  direct.pkl  dup_lag.pkl  dup_same.pkl  edge_xor.pkl  inv_lag.pkl  lag8_and.pkl  lag8_or.pkl  reg_delay.pkl  sync3.pkl  toggle.pkl  tri_tap.pkl  two_en.pkl
.cache_fp/: AND3_rich_0.pkl  AND_direct_droplet_0.pkl  AND_dup_same_rich_0.pkl  AND_layout_droplet_0.pkl  AND_layout_rich_0.pkl  AND_nand2_rich_0.pkl  AND_reg_delay_rich_0.pkl  AND_retimed_rich_0.pkl  LAG15_or_droplet_0.pkl  LAG15_or_rich_0.pkl  LAG15_xor_droplet_0.pkl  LAG15_xor_rich_0.pkl  LAG8_and_droplet_0.pkl  LAG8_and_rich_0.pkl  LAG8_or_droplet_0.pkl  LAG8_or_rich_0.pkl  OR_bit0_rich_0.pkl  OR_bit1_droplet_0.pkl  OR_bit1_rich_0.pkl  STATE_fsm_droplet_0.pkl  STATE_fsm_rich_0.pkl  STATE_toggle_rich_0.pkl  XOR_3cell_droplet_0.pkl  XOR_3cell_rich_0.pkl  XOR_gate_rich_0.pkl
.cache_fp_p/: P_AND_c_rich.pkl  P_AND_lay_droplet.pkl  P_AND_lay_rich.pkl  P_DUPLAG_droplet.pkl  P_DUPLAG_rich.pkl  P_LATCH_droplet.pkl  P_LATCH_rich.pkl  P_OR_rich.pkl  P_STATE_droplet.pkl  P_STATE_rich.pkl  P_TRI_droplet.pkl  P_TRI_rich.pkl  P_XOR_droplet.pkl  P_XOR_rich.pkl
.cache_source/: and3_111_False.pkl  cascade_111_False.pkl  demorgan_111_False.pkl  direct_000_False.pkl  direct_111_False.pkl  direct_111_active.pkl  direct_111_cross.pkl  direct_buf_111_False.pkl  dup_lag_111_False.pkl  dup_same_111_False.pkl  inv_lag_111_False.pkl  lag15_or_111_False.pkl  (+10 more)
edlab/: cli.py  (+4 more)
(+1906 files in other folders)
