[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergent-dynamics-lab"
version = "0.1.0"
description = "Falsifiable regime discovery for persistent dynamical organization under constituent turnover."
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0,<3",
  "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9"]

[project.scripts]
edlab = "edlab.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["edlab*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

